[project]
name = "super-resolution-vae"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lpips>=0.1.4",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "polars>=1.30.0",
    "rasterio>=1.4.3",
    "torch>=2.7.0",
    "tqdm>=4.67.1",
]
