[project]
name = "super-resolution-vae"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13.3"
dependencies = [
    "imagecodecs>=2025.3.30",
    "lpips>=0.1.4",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "polars>=1.30.0",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "ruff>=0.11.11",
    "scikit-image>=0.25.2",
    "tensorboard>=2.19.0",
    "tifffile>=2025.5.21",
    "toml>=0.10.2",
    "torch==2.6.0",
    "tqdm>=4.67.1",
    "wandb>=0.19.11",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["dataset", "utils", "callbacks", "task", "train"]

[tool.setuptools.packages.find]
include = ["loss", "loss.*", "models", "models.*"]

[tool.uv]
link-mode = "symlink"
